--- a/css/custom.css
+++ b/css/custom.css
@@ -68,14 +68,78 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
-
+th:nth-child(1){
+    width: 170px;
+}
+th:nth-child(2){
+    width: 140px;
+}
+th:nth-child(3){
+    width: 100px;
+}
+th:nth-child(4){
+    width: 100px;
+}
+th:nth-child(5){
+    width: 100px;
+}
+th:nth-child(6){
+    width: 170px;
+}
+th:nth-child(1){
+    width: 170px;
+}
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
     text-align: center;
 }
+th{
+    background: #313840;
+    color: #fff;
+    text-transform: uppercase;
+}
+.fa-eye, .fa-pencil, .fa-trash{
+    cursor: pointer;
+}
 
 tr:nth-child(even) {
     background-color: #dddddd;
+}
+.overlay{
+    position: fixed;
+    background: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    display: none;
+}
+.overlay-inner{
+    width: 750px;
+    height: 400px;
+    position: absolute;
+    /*transform: rotate(50%, 50%);*/
+    top: 0;
+    left: 0;
+    background:#313840;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    margin-top: -200px;
+    margin-left: -375px;
+    box-sizing: border-box;
+    padding: 50px;
+}
+.overlay-inner .row{
+    padding: 1% 0;
+}
+.close{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: #fff;
 }
